--- a/rot/css/common.css
+++ b/rot/css/common.css
@@ -59,13 +59,14 @@ body, html {
         margin: 0 20px;
     }
 }
-@media screen and (max-width:1024px){    
+@media screen and (max-width:1078px){
     :root {
         --header-h: 54px;
     }
 }
-@media screen and (max-width:640px){
+@media screen and (max-width:1024px){    
     :root {
+        --header-h: 54px;
         --body-m-default: 15px;
         --visual-L: 2.66rem;
         --visual-m: 2.13rem;
@@ -82,6 +83,8 @@ body, html {
         --body-m-default: 15px;
         --sub: 0.86rem;
     }
+}
+@media screen and (max-width:730px){
 }
 @media screen and (max-width:360px){
 
