250214-두번째 포폴완료
히스토리 크기 이슈는 코딩을 다시해야할수있음

--- a/rot/css/layout.css
+++ b/rot/css/layout.css
@@ -92,4 +92,10 @@ footer .copyright {
     footer {
         padding: 2.13em 0 2.66em 0;
     }
+    footer .wrapper {
+        gap: 1.6em;
+    }
+    footer .infor h2 {
+        font-size: var(--title-m);
+    }
 }
