--- a/rot/css/default.css
+++ b/rot/css/default.css
@@ -5,12 +5,12 @@
     padding: 0;
     box-sizing: border-box;
 }
-body{
+/*body{
     -ms-overflow-style: none;
     }
 ::-webkit-scrollbar {
      display: none;
-    }
+    }*/
 h1, h2, h3, h4, h5, h6 {
     font-weight: inherit; 
     font-size: inherit;
