--- a/rot/css/font.css
+++ b/rot/css/font.css
@@ -14,5 +14,5 @@
     font-family: "Riasans";
     src: local('Pretendard Regular'), url(../fonts/RiaSans-ExtraBold.woff2) format('woff2');
     font-weight: 700;
-    font-style: Bold;
+    font-style: normal;
 }
