--- a/Sejong/scss/__default.scss
+++ b/Sejong/scss/__default.scss
@@ -1,8 +1,8 @@
 body, html {
     font-family: "Pretendard",'NanumSquareNeo', '나눔스퀘어네오', '나눔고딕', NanumGothic, -apple-system, BlinkMacSystemFont, helvetica, "Apple SD Gothic Neo", sans-serif;
-    font-size: var(--body-m-default);
+    font-size: 17px;
     font-weight: 400;
-    color: var(--bdoy-color);
+    color: #555;
     line-height: 1.5;
     word-break: keep-all; 
     word-wrap: break-word;
