--- a/Sejong/scss/__common.scss
+++ b/Sejong/scss/__common.scss
@@ -22,7 +22,7 @@ $hover-color-60 :#51419A;
 $pressed-color-70:#6857B8;
 $secondary-color: #AE2668;
 $title-color: #1D1D1D;
-$bdoy-color: #555;
+$body-color: #555;
 $disalbe:#E4E4E4;
 $text-disalbe:#8E8E8E;
 $border:#c6c6c6;
